# c_dynamic_list

./: .gitignore  CMakeLists.txt
include/linked_list/: dll.h  linked_list.h  node.h  sll.h
src/app/: main.c
src/linked_list/: dll.c  linked_list.c  sll.c
